--- a/assets/scss/global/inputs.scss
+++ b/assets/scss/global/inputs.scss
@@ -1,9 +1,37 @@
 .ss-input-default {
     font-size: 16px !important;
     background: $white4 !important;
+    border: 1px solid $black2 !important;
 }
 
 .ss-input-form-default {
     font-size: 18px !important;
     background: $white4 !important;
+    border: 1px solid $black2 !important;
+}
+
+.ss-textarea-form-default {
+    font-size: 18px !important;
+    background: $white4 !important;
+    border: 1px solid $black2 !important;
+}
+
+.ss-radio-default {
+    &.form-check-input {
+        border-radius: 5px !important;
+        height: 18px;
+        width: 18px;
+        border: 2px solid $black2;
+
+
+        &:checked {
+            background-color: $red1;
+            border-color: $red1;
+        }
+    }
+
+    ~ .form-check-label {
+        text-transform: capitalize;
+        @include font-custom(18px, 25.2px, 400, $black3);
+    }
 }
