--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -143,3 +143,7 @@ $sizeList: (0, 5, 8, 10, 20, 25, 27, 25, 30, 40, 45, 50, 60);
         padding-right: 20px !important;
     }
 }
+
+.font-weight-bold {
+    font-weight: bold;
+}
