--- a/assets/scss/global/inputs.scss
+++ b/assets/scss/global/inputs.scss
@@ -35,3 +35,23 @@
         @include font-custom(18px, 25.2px, 400, $black3);
     }
 }
+
+.ss-radio-feedback {
+    &.form-check-input {
+        border-radius: 50% !important;
+        width: 25px;
+        height: 25px;
+        border: 1px solid $black2;
+
+
+        &:checked {
+            background-color: $red1;
+            border-color: $red1;
+        }
+    }
+
+    ~ .form-check-label {
+        text-transform: capitalize;
+        @include font-custom(18px, 34.2px, 400, $black3);
+    }
+}
